crates/panels/re_time_panel/tests/integration/snapshots/various_filters-path.snap
---
source: crates/panels/re_time_panel/tests/integration/time_panel_filter_tests.rs
expression: streams_tree_data
---
children:
  - entity_path: []
    label: /
    highlight_sections: []
    default_open: true
    children:
      - entity_path:
          - path
        label: path/
        highlight_sections:
          - start: 0
            end: 4
        default_open: true
        children:
          - entity_path:
              - path
              - onto
            label: onto/
            highlight_sections: []
            default_open: true
            children:
              - entity_path:
                  - path
                  - onto
                  - their
                label: their/
                highlight_sections: []
                default_open: true
                children:
                  - entity_path:
                      - path
                      - onto
                      - their
                      - coils
                    label: coils
                    highlight_sections: []
                    default_open: false
                    children: []
          - entity_path:
              - path
              - to
            label: to/
            highlight_sections: []
            default_open: true
            children:
              - entity_path:
                  - path
                  - to
                  - left
                label: left
                highlight_sections: []
                default_open: false
                children: []
              - entity_path:
                  - path
                  - to
                  - right
                label: right
                highlight_sections: []
                default_open: false
                children: []
              - entity_path:
                  - path
                  - to
                  - the
                label: the/
                highlight_sections: []
                default_open: true
                children:
                  - entity_path:
                      - path
                      - to
                      - the
                      - void
                    label: void
                    highlight_sections: []
                    default_open: false
                    children: []
