crates/panels/re_time_panel/tests/integration/snapshots/various_filters-t.snap
---
source: crates/panels/re_time_panel/tests/integration/time_panel_filter_tests.rs
expression: streams_tree_data
---
children:
  - entity_path: []
    label: /
    highlight_sections: []
    default_open: true
    children:
      - entity_path:
          - center
        label: center/
        highlight_sections:
          - start: 3
            end: 4
        default_open: true
        children:
          - entity_path:
              - center
              - way
            label: way
            highlight_sections: []
            default_open: false
            children: []
      - entity_path:
          - path
        label: path/
        highlight_sections:
          - start: 2
            end: 3
        default_open: true
        children:
          - entity_path:
              - path
              - onto
            label: onto/
            highlight_sections:
              - start: 2
                end: 3
            default_open: true
            children:
              - entity_path:
                  - path
                  - onto
                  - their
                label: their/
                highlight_sections:
                  - start: 0
                    end: 1
                default_open: true
                children:
                  - entity_path:
                      - path
                      - onto
                      - their
                      - coils
                    label: coils
                    highlight_sections: []
                    default_open: false
                    children: []
          - entity_path:
              - path
              - to
            label: to/
            highlight_sections:
              - start: 0
                end: 1
            default_open: true
            children:
              - entity_path:
                  - path
                  - to
                  - left
                label: left
                highlight_sections:
                  - start: 3
                    end: 4
                default_open: false
                children: []
              - entity_path:
                  - path
                  - to
                  - right
                label: right
                highlight_sections:
                  - start: 4
                    end: 5
                default_open: false
                children: []
              - entity_path:
                  - path
                  - to
                  - the
                label: the/
                highlight_sections:
                  - start: 0
                    end: 1
                default_open: true
                children:
                  - entity_path:
                      - path
                      - to
                      - the
                      - void
                    label: void
                    highlight_sections: []
                    default_open: false
                    children: []
      - entity_path:
          - __properties
        label: __properties/
        highlight_sections:
          - start: 8
            end: 9
        default_open: true
        children:
          - entity_path:
              - __properties
              - episode
            label: episode
            highlight_sections: []
            default_open: false
            children: []
